// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept the style prop 1`] = `
.emotion-0 {
  position: absolute;
  width: 100%;
  z-index: 2;
  color: red;
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  position: absolute;
  width: 100%;
  z-index: 2;
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;
